@@ -7,3 +7,8 @@ with-doctest = True
 doctest-extension = txt
 include = docs
 exclude = jsonrpc-example.txt
+with-coverage=True
+cover-erase=True
+cover-html=True
+cover-html-dir=html_coverage
+cover-package=webob
